This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

14-Apr-2004 (Lars Duening)  (3.3.519)
  - (prolang.y) I had to restrict '&(struct->member)' to a single level
       of member lookup because the compiler generated invalid code.

13-Apr-2004 (Lars Duening)  (3.3.518)
  - (sprintf.c) Made the code portable to non-32-bit machines.
  - (test/t-040413) Added a testcase for two struct lookup issues.

13-Apr-2004 (Lars Duening)  (3.3.517)
  - (sprintf.c) Format '%b' to print a number in binary notation (supplied
       by Ralph - thanks!).

13-Apr-2004 (Lars Duening)  (3.3.516)
  - (func_spec, prolang.y, interpret.c) I had to back out the recent change
       as it interfered with the use of bitflags. We need a proper unsigned
       type for this kind of thing.

12-Apr-2004 (Lars Duening)  (3.3.515)
  - (mud/heaven7, settings/heaven7) Heaven7 v4 runs natively on LDMud 3.2 .
  - (func_spec, prolang.y, interpret.c) Constant integer numbers exceeding the
        allowed range cause runtime errors (reported by Ralph).

11-Apr-2004 (Lars Duening)  (3.3.514)
  - (svalue.h) Reserved CLOSURE typecode 1 (used to be CLOSURE_ALIEN_LFUN) for
        future use, so that the other closure typecode have the same value as
        in 3.2 (suggested by Sebastion).
  - (mudlib/sys/lpctypes.h) Added symbolic defines for the closure typecodes.

10-Apr-2004 (Lars Duening)  (3.3.513)
  - (comm.c) Corrected a compilation error when TELNET_DEBUG is defined
       (thanks, Tobias).
  - (comm.c) Using input_to() without a command_giver crashed the
        driver.
  - (erq/erq.c, xerq/lookup.c) Well, TRY_AGAIN is a h_errno result,
       not errno (thanks, Tobias).
  - (xptmalloc.c) Under *BSD when using pthreads and GC support, malloc()
       is used before the pthread structures are available. For this
       reason, REPLACE_MALLOC is disabled under *BSD (for simplicity in
       all cases).
