@@ -244,6 +244,7 @@ Lars Duening thanks:
      Rodney Quaye (sark@oberon.krans.com)
      Ron Dawson (rondawson@syd.eastlink.ca, rdawson@cgc.ns.ca, Caper@PixieMud)
      Sebastian Huss (huss@informatik.hu-berlin.de, baba@avalon)
+     Shinarae Lluminus@Batmud (shinarae_lluminus@hotmail.com)
      Slava "DieHARD" Ignatjev (root@impar.com, slava@intersfera.lt)
      Sieni (sampsa@netsonic.fi)
      Simon Fischer (firebat@redcrown.de)
