@@ -63,16 +63,17 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 519)
-(Parent-Version lpmud 3-3 518)
+(Project-Version lpmud 3-3 520)
+(Parent-Version lpmud 3-3 519)
 (Version-Log "
-  - (prolang.y) I had to restrict '&(struct->member)' to a single level
-       of member lookup because the compiler generated invalid code.
+  - (func_spec, array, simulate) Efun unique_array() can now use
+       a closure as separator function, and also pass extra arguments
+       (suggested by Shinarae).
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Wed, 14 Apr 2004 22:10:42 -0600")
+(Checkin-Time "Thu, 15 Apr 2004 22:27:56 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -109,9 +110,9 @@
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.72 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.582 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.344 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.73 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.583 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.345 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -143,7 +144,7 @@
   (src/settings/finalfrontier (lpmud/i/29_finalfront 1.1.1.6 744))
   (src/settings/forgottendreams (lpmud/h/2_forgottend 1.2.1.8 744))
   (src/settings/gestrandet (lpmud/e/b/51_gestrandet 1.1 744))
-  (src/settings/heaven7 (lpmud/k/22_heaven7 1.6 644))
+  (src/settings/heaven7 (lpmud/k/22_heaven7 1.7 644))
   (src/settings/hyperborea (lpmud/h/20_hyperborea 1.3 744))
   (src/settings/morgengrauen (lpmud/k/37_morgengrau 1.7 744))
   (src/settings/lethynna (lpmud/d/b/0_lethynna 1.1 744))
@@ -168,8 +169,8 @@
   (src/alloca.c (lpmud/d/13_alloca.c 1.11 644))
   (src/actions.h (lpmud/d/11_actions.h 1.6.1.7 644))
   (src/actions.c (lpmud/d/12_actions.c 1.15.1.44 644))
-  (src/array.h (lpmud/f/47_array.h 1.18.1.21 644))
-  (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.7 644))
+  (src/array.h (lpmud/f/47_array.h 1.18.1.22 644))
+  (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.8 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.7 644))
   (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.32 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
@@ -293,8 +294,8 @@
   (src/sent.h (lpmud/33_sent.h 1.11.1.4 644))
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.5 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.4 644))
-  (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.32 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.118 644))
+  (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.33 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.119 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.87 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.4 644))
@@ -317,7 +318,7 @@
   (src/xptmalloc.c (lpmud/d/b/10_xptmalloc. 1.3 644))
 
   ;; Build files
-  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.26 644))
+  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.27 644))
   (src/string_spec (lpmud/f/6_string_spe 1.14.1.14 644))
   (src/mkfunc.c (lpmud/l/14_mkfunc.c 1.1 644))
   (src/make_func.y (lpmud/b/7_make_func. 1.25.1.30.1.7 644))
@@ -1275,7 +1276,7 @@
   (doc/efun/terminal_colour (lpmud/g/6_terminal_c 1.10 644))
   (doc/efun/typeof (lpmud/r/2_typeof 1.2 644))
   (doc/efun/unbound_lambda (lpmud/r/3_unbound_la 1.2 644))
-  (doc/efun/unique_array (lpmud/r/4_unique_arr 1.1.1.2 644))
+  (doc/efun/unique_array (lpmud/r/4_unique_arr 1.1.1.3 644))
   (doc/efun/unmkmapping (lpmud/l/40_unmkmappin 1.6 644))
   (doc/efun/unquote (lpmud/s/7_unquote 1.1 644))
   (doc/efun/unshadow (lpmud/r/5_unshadow 1.2 644))
@@ -1307,7 +1308,7 @@
   (doc/efun.de/unshadow.de (lpmud/f/b/22_unshadow.d 1.1 640))
   (doc/efun.de/unquote.de (lpmud/f/b/23_unquote.de 1.1 640))
   (doc/efun.de/unmkmapping.de (lpmud/f/b/24_unmkmappin 1.1 640))
-  (doc/efun.de/unique_array.de (lpmud/f/b/25_unique_arr 1.1 640))
+  (doc/efun.de/unique_array.de (lpmud/f/b/25_unique_arr 1.2 640))
   (doc/efun.de/unbound_lambda.de (lpmud/f/b/26_unbound_la 1.1 640))
   (doc/efun.de/typeof.de (lpmud/f/b/27_typeof.de 1.1 640))
   (doc/efun.de/trim.de (lpmud/f/b/28_trim.de 1.1 640))
