@@ -424,7 +424,7 @@ mixed  *filter_objects(mixed *, string, ...);
 mixed  *map_objects(mixed *, string, ...);
 mixed  *sort_array(mixed *,string|closure, ...);
 mixed  *transpose_array(mixed *);
-mixed  *unique_array(mixed *, string, mixed default: F_CONST0);
+mixed  *unique_array(mixed *, string|closure, ...);
 
 mixed   filter(mapping|mixed *|string, string|closure|mapping, ...);
 mapping filter_indices(mapping, string|closure,  ...);
